add people who have submitted bug reports

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,3 +4,14 @@ Jo Bovy <bovy@ias.edu>
 
 Direct contributions to the code base:
 
+(none)
+
+Bug reports:
+(incomplete list, apologies if I forgot anybody!)
+
+T. E. Pickering
+Željko Ivezić
+Resmi Lekshmi
+Rok Roskar
+Dylan Gregersen
+Eduardo Balbinot
