--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -3,6 +3,8 @@ v0.2 (XXXX-XX-XX)
 
 CURRENT DEVELOPMENT VERSION
 
+- Added --no-openmp installation option to allow installation without OpenMP support (workaround for clang not supporting OpenMP)
+
 - Added galpy.util.bovy_conversion.force_in_10m13kms2
 
 
