change default vo and ro to 220 and 8

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -3,13 +3,17 @@ v0.2 (XXXX-XX-XX)
 
 CURRENT DEVELOPMENT VERSION
 
-- Started on adding virial radius of NFW potential, allow initialization of NFW potential with concentration and mass
+- Changed default vo and ro to 220 km/s and 8 kpc, respectively;
 
-- Started adding potential.mass to return the mass enclosed
+- Better handling of vo,ro, and solarmotion in Orbit instances (Orbit initialization value is now used to generate RA, Dec, etc. outputs);
 
-- Added --no-openmp installation option to allow installation without OpenMP support (workaround for clang not supporting OpenMP)
+- Started on adding virial radius of NFW potential, allow initialization of NFW potential with concentration and mass;
 
-- Added galpy.util.bovy_conversion.force_in_10m13kms2, galpy.util.bovy_conversion.dens_in_criticaldens, galpy.util.bovy_conversion.dens_in_meanmatterdens
+- Started adding potential.mass to return the mass enclosed;
+
+- Added --no-openmp installation option to allow installation without OpenMP support (workaround for clang not supporting OpenMP);
+
+- Added galpy.util.bovy_conversion.force_in_10m13kms2, galpy.util.bovy_conversion.dens_in_criticaldens, galpy.util.bovy_conversion.dens_in_meanmatterdens.
 
 
 v0.1 (2014-01-09)
