--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -3,6 +3,8 @@ v0.2 (XXXX-XX-XX)
 
 CURRENT DEVELOPMENT VERSION
 
+- Sped up many of the functions in galpy.util.bovy_coords by removing scipy.frompyfunc dependency.
+
 - Allow Orbit initialization to specify a distance and velocity scale that is then used to output distances and velocities in physical coordinates.
 
 - Changed default vo and ro to 220 km/s and 8 kpc, respectively;
