--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -6,7 +6,7 @@ Direct contributions to the code base:
 
 Denis Erkal (_mass for TwoPowerSphericalPotential)
 Mark Fardal (streamdf improvements)
-Rok Roskar (first implementation of SnapshotPotential and InterpSnapshotPotential)
+Rok Roskar (first implementation of SnapshotRZPotential and InterpSnapshotRZPotential)
 
 Bug reports:
 (incomplete list, apologies if I forgot anybody!)
