--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -10,7 +10,7 @@ Rok Roskar (first implementation of SnapshotRZPotential and InterpSnapshotRZPote
 
 General help:
 
-Greg Stinson (advise on SnapshotRZPotential tests)
+Greg Stinson (advice on SnapshotRZPotential tests)
 
 Bug reports:
 (incomplete list, apologies if I forgot anybody!)
