--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,9 @@
+v1.2 (2016-XX-XX)
+==================
+
+- Added PseudoIsothermalPotential, a standard pseudo-isothermal-sphere
+  potential.
+
 v1.1 (2015-06-30)
 ==================
 
