Note about potential amplitude redefinitions in the HISTORY file

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,16 @@
 v1.2 (2016-XX-XX)
 ==================
 
+- Added support for providing inputs to Potential and Orbit methods as
+  Quantities with units (#258). MOREMOREMORE
+
+- Re-defined the amplitude parameters of a few potentials to allow for
+  easier setups with amplitudes provided as Quantities with
+  units. This is the case for FlattenedPowerPotential,
+  PowerSphericalPotential, and PowerSphericalPotentialwCutoff,
+  CosmphiDiskPotential, LopsidedDiskPotential, and
+  EllipticalDiskPotential.
+
 - Added a module for modeling the effect of a subhalo impact on a
   tidal stream (galpy.df.streamgapdf).
 
