--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,8 +1,10 @@
 v1.2 (2016-XX-XX)
 ==================
 
-- Added support for providing inputs to Potential and Orbit methods as
-  Quantities with units (#258). MOREMOREMORE
+- Added support for providing inputs to all initializations, methods,
+  and functions as Quantities with units and for providing outputs as
+  astropy Quantities. See pull request #258 and the documentation for
+  full details.
 
 - quasiisothermaldf input ro replaced by refr to avoid clash with ro
   that specifies units (see above).
