--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -9,6 +9,7 @@ Mark Fardal (streamdf improvements)
 Rok Roskar (first implementation of SnapshotRZPotential and InterpSnapshotRZPotential)
 Jason Sanders (velocity kicks induced by interactions with Plummer, Hernquist, and general potentials, currently in streamgapdf)
 Wilma Trick (KuzminKutuzovPotential and various other contributions)
+Aladdin Seaifan (KuzminDiskPotential)
 
 General help:
 
