--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,21 +1,29 @@
 Author:
+=======
 
-Jo Bovy <bovy@ias.edu>
+Jo Bovy <bovy@astro.utoronto.ca>
+
+Major contributions:
+=====================
+
+Aladdin Seaifan (KuzminDiskPotential,SCFPotential)
 
 Direct contributions to the code base:
+=======================================
 
 Denis Erkal (_mass for TwoPowerSphericalPotential; also simulations to test streamgapdf)
 Mark Fardal (streamdf improvements)
 Rok Roskar (first implementation of SnapshotRZPotential and InterpSnapshotRZPotential)
 Jason Sanders (velocity kicks induced by interactions with Plummer, Hernquist, and general potentials, currently in streamgapdf)
 Wilma Trick (KuzminKutuzovPotential and various other contributions)
-Aladdin Seaifan (KuzminDiskPotential)
 
 General help:
+==============
 
 Greg Stinson (advice on SnapshotRZPotential tests)
 
 Bug reports:
+============
 (incomplete list, apologies if I forgot anybody!)
 
 Alexander de la Vega
