--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,3 +1,11 @@
+v1.3 (2017-XX-XX)
+==================
+
+- Allow transformations of (ra,dec) and (pmra,pmdec) to custom
+  coordinate systems.
+
+- Allow plotting of the spherical radius in Orbit.plot
+
 v1.2 (2016-09-06)
 ==================
 
