Add entry for FerrersPotential

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -16,6 +16,8 @@ Mark Fardal (streamdf improvements)
 Rok Roskar (first implementation of SnapshotRZPotential and InterpSnapshotRZPotential)
 Jason Sanders (velocity kicks induced by interactions with Plummer, Hernquist, and general potentials, currently in streamgapdf)
 Wilma Trick (KuzminKutuzovPotential and various other contributions)
+Anna Juranova (FerrersPotential)
+Semyeong Oh (FerrersPotential)
 
 General help:
 ==============
