--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -43,6 +43,10 @@ v1.3 (2017-XX-XX)
   is different from the requested one (for when C integration falls
   back onto Python; see #286).
 
+- Added button to code examples in the documentation that copies the
+  examples to the user's clipboard for easy pasting into a Python
+  interpreter.
+
 - Switched test suite from nose to pytest (#303).
 
 v1.2 (2016-09-06)
